--- a/index.html
+++ b/index.html
@@ -3,115 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Fruitful Branch Family: A Christ-centered mission to reach 20 million souls with the Gospel by 2035. Join us in West Africa and beyond!">
-    <meta name="keywords" content="Gospel mission, West Africa evangelism, The Fruitful Branch Family, Christian ministry Nigeria, reach 20 million">
+    <meta name="description" content="The Fruitful Branch Family: A Christ-centered mission to reach 20 million souls by 2035 in West Africa. Join us!">
+    <meta name="keywords" content="The Fruitful Branch Family, Christian ministry Nigeria, Gospel mission, West Africa evangelism">
     <meta name="author" content="The Fruitful Branch Family">
     <title>Home | The Fruitful Branch Family</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lora:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./assets/favicon.ico">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <style>
+        :root { --primary: #1B5E20; --secondary: #E8F5E9; --accent: #FFCA28; --neutral: #FFFFFF; --text: #1A1A1A; }
+        body { font-family: 'Inter', sans-serif; margin: 0; }
+        header { background: var(--primary); }
+        .hero { background-size: cover; }
+    </style>
 </head>
-<body>
-    <!-- Header -->
-    <header class="bg-green-800 text-white sticky top-0 z-50">
+<body class="light-mode">
+    <header class="bg-primary text-white sticky top-0 z-50">
         <nav class="container mx-auto flex items-center justify-between p-4">
             <div class="flex items-center">
-                <img src="assets/images/logo.png" alt="Fruitful Branch Family Logo" class="h-12 mr-2">
-                <h1 class="text-2xl font-bold font-roboto">The Fruitful Branch Family</h1>
+                <img src="./assets/images/logo.webp" alt="Fruitful Branch Family Logo" class="h-12 mr-2" loading="lazy">
+                <h1 class="text-2xl font-bold font-inter">The Fruitful Branch Family</h1>
             </div>
-            <div class="md:hidden">
-                <button id="menu-toggle" aria-label="Toggle Menu"><i class="fas fa-bars text-2xl"></i></button>
+            <button id="hamburger-toggle" class="md:hidden text-2xl focus:outline-none" aria-label="Toggle Mobile Menu" aria-expanded="false">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="flex items-center space-x-6">
+                <ul class="hidden md:flex space-x-6 font-inter" id="desktop-menu">
+                    <li><a href="index.html" class="hover:text-accent" aria-current="page">Home</a></li>
+                    <li><a href="about.html" class="hover:text-accent">About</a></li>
+                    <li><a href="mission.html" class="hover:text-accent">Mission</a></li>
+                    <li><a href="get-involved.html" class="hover:text-accent">Get Involved</a></li>
+                    <li><a href="media.html" class="hover:text-accent">Media</a></li>
+                    <li><a href="contact.html" class="hover:text-accent">Contact</a></li>
+                </ul>
+                <button id="dark-mode-toggle" class="text-xl" aria-label="Toggle Dark Mode">
+                    <i class="fas fa-moon"></i>
+                </button>
             </div>
-            <ul id="nav-menu" class="hidden md:flex space-x-6 font-roboto">
-                <li><a href="index.html" class="hover:text-amber-400">Home</a></li>
-                <li><a href="about.html" class="hover:text-amber-400">About</a></li>
-                <li><a href="mission.html" class="hover:text-amber-400">Mission</a></li>
-                <li><a href="get-involved.html" class="hover:text-amber-400">Get Involved</a></li>
-                <li><a href="media.html" class="hover:text-amber-400">Media</a></li>
-                <li><a href="contact.html" class="hover:text-amber-400">Contact</a></li>
-            </ul>
         </nav>
+        <div id="mobile-menu" class="hidden md:hidden bg-primary text-white flex flex-col items-center space-y-4 py-4 fixed top-0 right-0 w-3/4 h-full z-40 transition-transform transform translate-x-full glassmorphism">
+            <button id="hamburger-close" class="self-end mr-4 text-2xl" aria-label="Close Mobile Menu">
+                <i class="fas fa-times"></i>
+            </button>
+            <a href="index.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Home" aria-current="page">Home</a>
+            <a href="about.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="About">About</a>
+            <a href="mission.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Mission">Mission</a>
+            <a href="get-involved.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Get Involved">Get Involved</a>
+            <a href="media.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Media">Media</a>
+            <a href="contact.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Contact">Contact</a>
+        </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero bg-cover bg-center h-screen flex items-center text-white" style="background-image: url('assets/images/hero-home.jpg');">
+    <section class="hero bg-cover bg-center h-96 flex items-center text-white animate-fade-in" style="background-image: url('./assets/images/hero-home.webp');">
         <div class="container mx-auto text-center px-4">
-            <h2 class="text-4xl md:text-5xl font-bold font-roboto mb-4">Welcome to The Fruitful Branch Family</h2>
-            <p class="text-xl font-lora mb-6">"Abide in Me, and you will bear much fruit" (John 15:5). Join our mission to reach 20 million souls by 2035.</p>
-            <div class="space-x-4">
-                <a href="get-involved.html" class="btn btn-primary">Join Us</a>
-                <a href="media.html" class="btn btn-secondary">Watch Our Story</a>
+            <h2 class="text-4xl font-bold font-inter">Welcome to The Fruitful Branch Family!</h2>
+            <p class="text-xl font-merriweather mt-4">Join our mission to reach 20 million souls by 2035.</p>
+            <a href="get-involved.html" class="btn btn-primary mt-6 dynamic-cta">Make We Bear Fruit!</a>
+        </div>
+    </section>
+
+    <section class="py-16 bg-secondary">
+        <div class="container mx-auto px-4">
+            <h3 class="text-3xl font-bold font-inter text-center mb-8">Our Calling</h3>
+            <p class="text-lg font-merriweather text-center mb-6">Inspired by John 15:5, we are a Christ-centered family spreading the Gospel across West Africa through hubs, sermons, and digital outreach.</p>
+            <div class="text-center">
+                <a href="about.html" class="btn btn-secondary dynamic-cta">Learn More</a>
             </div>
         </div>
     </section>
 
-    <!-- Our Calling -->
-    <section class="py-16 bg-gray-100">
+    <section class="py-16 bg-neutral">
         <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto text-center mb-8">Our Calling</h3>
+            <h3 class="text-3xl font-bold font-inter text-center mb-8">Join the Harvest</h3>
             <div class="grid md:grid-cols-3 gap-8">
-                <div class="card">
-                    <h4 class="text-xl font-roboto font-semibold mb-2">Evangelism</h4>
-                    <p class="font-lora">200,000 conversions through 34–35 monthly sermons and crusades by 2035.</p>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">Evangelism</h4>
+                    <p class="font-merriweather">Preach in markets and online to reach 200,000 souls by 2035.</p>
                 </div>
-                <div class="card">
-                    <h4 class="text-xl font-roboto font-semibold mb-2">Discipleship</h4>
-                    <p class="font-lora">Train 2,000 leaders and 8,900–9,000 course enrollees in 70–80 hubs.</p>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">Discipleship</h4>
+                    <p class="font-merriweather">Train 2,000 leaders across 70–80 hubs in Nigeria and Ghana.</p>
                 </div>
-                <div class="card">
-                    <h4 class="text-xl font-roboto font-semibold mb-2">Impact</h4>
-                    <p class="font-lora">Reach 10 million followers and serve 100,000–150,000 through charity.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Be Part of the Harvest -->
-    <section class="py-16 bg-white">
-        <div class="container mx-auto px-4 text-center">
-            <h3 class="text-3xl font-bold font-roboto mb-6">Be Part of the Harvest</h3>
-            <p class="text-lg font-lora mb-6">From Lagos to Accra, your prayers and support can change lives. Make we bear fruit together!</p>
-            <a href="get-involved.html" class="btn btn-primary">Get Involved</a>
-        </div>
-    </section>
-
-    <!-- Latest News -->
-    <section class="py-16 bg-gray-100">
-        <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto text-center mb-8">Latest News</h3>
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="news-card">
-                    <p class="font-lora"><strong>June 2025:</strong> Launched first hub in Lagos with 50 believers.</p>
-                </div>
-                <div class="news-card">
-                    <p class="font-lora"><strong>July 2025:</strong> Preaching reaches 500 weekly in markets.</p>
-                </div>
-                <div class="news-card">
-                    <p class="font-lora"><strong>2029:</strong> Gospel app coming in Pidgin, Swahili, and more!</p>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">Impact</h4>
+                    <p class="font-merriweather">Grow to 10 million followers and serve communities with charity.</p>
                 </div>
             </div>
             <div class="text-center mt-8">
-                <a href="contact.html" class="btn btn-secondary">Follow on WhatsApp</a>
+                <a href="mission.html" class="btn btn-primary dynamic-cta">Our Vision</a>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-green-800 text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <p class="font-lora mb-4">© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
+    <footer class="bg-primary text-white py-8 relative overflow-hidden">
+        <div class="absolute inset-0 opacity-10 bg-[url('./assets/images/kente-pattern.webp')] bg-repeat"></div>
+        <div class="container mx-auto px-4 text-center relative z-10">
+            <p class="font-merriweather mb-4">© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
             <div class="flex justify-center space-x-6 mb-4">
-                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp text-2xl"></i></a>
-                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok text-2xl"></i></a>
-                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube text-2xl"></i></a>
+                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp text-2xl hover:text-accent"></i></a>
+                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok text-2xl hover:text-accent"></i></a>
+                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube text-2xl hover:text-accent"></i></a>
             </div>
-            <p class="font-roboto">Contact: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-amber-400">info@fruitfulbranchfamily.org</a> | +234-XXX-XXX-XXXX</p>
+            <p class="font-inter">Contact: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-accent">info@fruitfulbranchfamily.org</a> | +234-XXX-XXX-XXXX</p>
         </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
-                      </html>
+                                               </html>
