--- a/about.html
+++ b/about.html
@@ -3,87 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about The Fruitful Branch Family, a Christian mission to evangelize 20 million souls by 2035 in West Africa and globally.">
-    <meta name="keywords" content="About The Fruitful Branch Family, Christian mission Nigeria, Gospel evangelism, non-materialistic ministry">
+    <meta name="description" content="Learn about The Fruitful Branch Family, a Christ-centered mission founded in 2025 to reach 20 million souls by 2035 in West Africa.">
+    <meta name="keywords" content="The Fruitful Branch Family, Christian ministry Nigeria, Gospel mission, West Africa evangelism">
+    <meta name="author" content="The Fruitful Branch Family">
     <title>About | The Fruitful Branch Family</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lora:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./assets/favicon.ico">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <style>
+        :root { --primary: #1B5E20; --secondary: #E8F5E9; --accent: #FFCA28; --neutral: #FFFFFF; --text: #1A1A1A; }
+        body { font-family: 'Inter', sans-serif; margin: 0; }
+        header { background: var(--primary); }
+        .hero { background-size: cover; }
+    </style>
 </head>
-<body>
-    <header class="bg-green-800 text-white sticky top-0 z-50">
+<body class="light-mode">
+    <header class="bg-primary text-white sticky top-0 z-50">
         <nav class="container mx-auto flex items-center justify-between p-4">
             <div class="flex items-center">
-                <img src="assets/images/logo.png" alt="Fruitful Branch Family Logo" class="h-12 mr-2">
-                <h1 class="text-2xl font-bold font-roboto">The Fruitful Branch Family</h1>
+                <img src="./assets/images/logo.webp" alt="Fruitful Branch Family Logo" class="h-12 mr-2" loading="lazy">
+                <h1 class="text-2xl font-bold font-inter">The Fruitful Branch Family</h1>
             </div>
-            <div class="md:hidden">
-                <button id="menu-toggle" aria-label="Toggle Menu"><i class="fas fa-bars text-2xl"></i></button>
+            <button id="hamburger-toggle" class="md:hidden text-2xl focus:outline-none" aria-label="Toggle Mobile Menu" aria-expanded="false">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="flex items-center space-x-6">
+                <ul class="hidden md:flex space-x-6 font-inter" id="desktop-menu">
+                    <li><a href="index.html" class="hover:text-accent">Home</a></li>
+                    <li><a href="about.html" class="hover:text-accent" aria-current="page">About</a></li>
+                    <li><a href="mission.html" class="hover:text-accent">Mission</a></li>
+                    <li><a href="get-involved.html" class="hover:text-accent">Get Involved</a></li>
+                    <li><a href="media.html" class="hover:text-accent">Media</a></li>
+                    <li><a href="contact.html" class="hover:text-accent">Contact</a></li>
+                </ul>
+                <button id="dark-mode-toggle" class="text-xl" aria-label="Toggle Dark Mode">
+                    <i class="fas fa-moon"></i>
+                </button>
             </div>
-            <ul id="nav-menu" class="hidden md:flex space-x-6 font-roboto">
-                <li><a href="index.html" class="hover:text-amber-400">Home</a></li>
-                <li><a href="about.html" class="hover:text-amber-400">About</a></li>
-                <li><a href="mission.html" class="hover:text-amber-400">Mission</a></li>
-                <li><a href="get-involved.html" class="hover:text-amber-400">Get Involved</a></li>
-                <li><a href="media.html" class="hover:text-amber-400">Media</a></li>
-                <li><a href="contact.html" class="hover:text-amber-400">Contact</a></li>
-            </ul>
         </nav>
+        <div id="mobile-menu" class="hidden md:hidden bg-primary text-white flex flex-col items-center space-y-4 py-4 fixed top-0 right-0 w-3/4 h-full z-40 transition-transform transform translate-x-full glassmorphism">
+            <button id="hamburger-close" class="self-end mr-4 text-2xl" aria-label="Close Mobile Menu">
+                <i class="fas fa-times"></i>
+            </button>
+            <a href="index.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Home">Home</a>
+            <a href="about.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="About" aria-current="page">About</a>
+            <a href="mission.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Mission">Mission</a>
+            <a href="get-involved.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Get Involved">Get Involved</a>
+            <a href="media.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Media">Media</a>
+            <a href="contact.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Contact">Contact</a>
+        </div>
     </header>
 
-    <section class="hero bg-cover bg-center h-96 flex items-center text-white" style="background-image: url('assets/images/hero-about.jpg');">
+    <section class="hero bg-cover bg-center h-96 flex items-center text-white animate-fade-in" style="background-image: url('./assets/images/hero-about.webp');">
         <div class="container mx-auto text-center px-4">
-            <h2 class="text-4xl font-bold font-roboto">About Us: Bearing Fruit for Christ</h2>
-            <p class="text-xl font-lora mt-4">Founded in 2025 to fulfill Matthew 28:19.</p>
+            <h2 class="text-4xl font-bold font-inter">About Us: Bearing Fruit for Christ</h2>
+            <p class="text-xl font-merriweather mt-4">Founded in 2025 to fulfill Matthew 28:19.</p>
         </div>
     </section>
 
-    <section class="py-16 bg-gray-100">
+    <section class="py-16 bg-secondary">
         <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto mb-6">Our Journey</h3>
-            <p class="text-lg font-lora mb-6">Born in West Africa, The Fruitful Branch Family rejects prosperity gospel, embracing Jesus’ words and discipline. From one hub in 2025, we’re growing to 70–80 hubs, 20 global outposts, and a 2035 conference, uniting 10 million followers.</p>
-            <img src="assets/images/hub-meeting.jpg" alt="Hub Meeting" class="w-full rounded-lg shadow-md my-6" loading="lazy">
+            <h3 class="text-3xl font-bold font-inter text-center mb-8">Our Story</h3>
+            <div class="glassmorphism p-6 rounded-lg">
+                <p class="font-merriweather text-lg">In 2025, [Your Name], a dedicated teacher, resigned to answer God’s call to full-time ministry. Inspired by John 15:5, The Fruitful Branch Family was born to spread the Gospel across West Africa. With a vision to reach 20 million souls by 2035, we started with one hub in Lagos, preaching in markets and sharing sermons on TikTok and YouTube.</p>
+                <p class="font-merriweather text-lg mt-4">Make we shine for Jesus together, from Nigeria to Ghana and beyond!</p>
+            </div>
         </div>
     </section>
 
-    <section class="py-16 bg-white">
+    <section class="py-16 bg-neutral">
         <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto mb-6">Our Founder</h3>
-            <p class="text-lg font-lora mb-6">[Your Name], a West African evangelist, left teaching in 2025 to dedicate 100% to God’s call. With 5 hours of daily prayer and 3 hours of Bible study, he leads with humility, inspired by <em>The Cost of Discipleship</em>.</p>
-            <img src="assets/images/founder.jpg" alt="Founder" class="w-full md:w-1/2 rounded-lg shadow-md mx-auto" loading="lazy">
-        </div>
-    </section>
-
-    <section class="py-16 bg-gray-100">
-        <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto mb-6">Our Core Beliefs</h3>
-            <ul class="list-disc list-inside text-lg font-lora space-y-4">
-                <li><strong>Christ First:</strong> Jesus’ words (John 15:12–13) guide us.</li>
-                <li><strong>Discipline:</strong> Self-control aligns us with God’s will (Galatians 5:22–23).</li>
-                <li><strong>Humility:</strong> We live simply, rejecting materialism.</li>
-                <li><strong>Community:</strong> Pidgin and five languages welcome all to Christ.</li>
-            </ul>
+            <h3 class="text-3xl font-bold font-inter text-center mb-8">Our Journey</h3>
+            <div class="grid md:grid-cols-2 gap-8">
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">2025: The Beginning</h4>
+                    <p class="font-merriweather">Launched first hub in Lagos with 50 believers, reaching 500 weekly through market preaching.</p>
+                </div>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">2026–2030: Growth</h4>
+                    <p class="font-merriweather">Expand to 10 hubs, train 500 leaders, and reach 10,000 followers online.</p>
+                </div>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">2031–2035: Impact</h4>
+                    <p class="font-merriweather">70–80 hubs, 200,000 conversions, 10 million followers, and a Gospel app in five languages.</p>
+                </div>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">Beyond 2035</h4>
+                    <p class="font-merriweather">Global outreach, sustainable charity, and a legacy of fruitfulness.</p>
+                </div>
+            </div>
             <div class="text-center mt-8">
-                <a href="mission.html" class="btn btn-primary">Discover Our Mission</a>
+                <a href="get-involved.html" class="btn btn-primary dynamic-cta">Join Us Now</a>
             </div>
         </div>
     </section>
 
-    <footer class="bg-green-800 text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <p class="font-lora mb-4">© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
+    <footer class="bg-primary text-white py-8 relative overflow-hidden">
+        <div class="absolute inset-0 opacity-10 bg-[url('./assets/images/kente-pattern.webp')] bg-repeat"></div>
+        <div class="container mx-auto px-4 text-center relative z-10">
+            <p class="font-merriweather mb-4">© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
             <div class="flex justify-center space-x-6 mb-4">
-                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp text-2xl"></i></a>
-                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok text-2xl"></i></a>
-                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube text-2xl"></i></a>
+                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp text-2xl hover:text-accent"></i></a>
+                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok text-2xl hover:text-accent"></i></a>
+                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube text-2xl hover:text-accent"></i></a>
             </div>
-            <p class="font-roboto">Contact: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-amber-400">info@fruitfulbranchfamily.org</a> | +234-XXX-XXX-XXXX</p>
+            <p class="font-inter">Contact: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-accent">info@fruitfulbranchfamily.org</a> | +234-XXX-XXX-XXXX</p>
         </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
-  </html>
+</html>
