--- a/mission.html
+++ b/mission.html
@@ -3,102 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Our mission to reach 20 million souls by 2035 with the Gospel through evangelism, discipleship, and charity in West Africa and globally.">
-    <meta name="keywords" content="Gospel mission 2035, West Africa Christian hubs, 20 million evangelized, The Fruitful Branch Family goals">
-    <title>Our Mission | The Fruitful Branch Family</title>
+    <meta name="description" content="Discover the mission of The Fruitful Branch Family to evangelize, disciple, and impact 20 million souls by 2035 in West Africa.">
+    <meta name="keywords" content="Gospel mission, West Africa evangelism, Christian ministry Nigeria, The Fruitful Branch Family">
+    <meta name="author" content="The Fruitful Branch Family">
+    <title>Mission | The Fruitful Branch Family</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lora:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./assets/favicon.ico">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <style>
+        :root { --primary: #1B5E20; --secondary: #E8F5E9; --accent: #FFCA28; --neutral: #FFFFFF; --text: #1A1A1A; }
+        body { font-family: 'Inter', sans-serif; margin: 0; }
+        header { background: var(--primary); }
+        .hero { background-size: cover; }
+    </style>
 </head>
-<body>
-    <header class="bg-green-800 text-white sticky top-0 z-50">
+<body class="light-mode">
+    <header class="bg-primary text-white sticky top-0 z-50">
         <nav class="container mx-auto flex items-center justify-between p-4">
             <div class="flex items-center">
-                <img src="assets/images/logo.png" alt="Fruitful Branch Family Logo" class="h-12 mr-2">
-                <h1 class="text-2xl font-bold font-roboto">The Fruitful Branch Family</h1>
+                <img src="./assets/images/logo.webp" alt="Fruitful Branch Family Logo" class="h-12 mr-2" loading="lazy">
+                <h1 class="text-2xl font-bold font-inter">The Fruitful Branch Family</h1>
             </div>
-            <div class="md:hidden">
-                <button id="menu-toggle" aria-label="Toggle Menu"><i class="fas fa-bars text-2xl"></i></button>
+            <button id="hamburger-toggle" class="md:hidden text-2xl focus:outline-none" aria-label="Toggle Mobile Menu" aria-expanded="false">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="flex items-center space-x-6">
+                <ul class="hidden md:flex space-x-6 font-inter" id="desktop-menu">
+                    <li><a href="index.html" class="hover:text-accent">Home</a></li>
+                    <li><a href="about.html" class="hover:text-accent">About</a></li>
+                    <li><a href="mission.html" class="hover:text-accent" aria-current="page">Mission</a></li>
+                    <li><a href="get-involved.html" class="hover:text-accent">Get Involved</a></li>
+                    <li><a href="media.html" class="hover:text-accent">Media</a></li>
+                    <li><a href="contact.html" class="hover:text-accent">Contact</a></li>
+                </ul>
+                <button id="dark-mode-toggle" class="text-xl" aria-label="Toggle Dark Mode">
+                    <i class="fas fa-moon"></i>
+                </button>
             </div>
-            <ul id="nav-menu" class="hidden md:flex space-x-6 font-roboto">
-                <li><a href="index.html" class="hover:text-amber-400">Home</a></li>
-                <li><a href="about.html" class="hover:text-amber-400">About</a></li>
-                <li><a href="mission.html" class="hover:text-amber-400">Mission</a></li>
-                <li><a href="get-involved.html" class="hover:text-amber-400">Get Involved</a></li>
-                <li><a href="media.html" class="hover:text-amber-400">Media</a></li>
-                <li><a href="contact.html" class="hover:text-amber-400">Contact</a></li>
-            </ul>
         </nav>
+        <div id="mobile-menu" class="hidden md:hidden bg-primary text-white flex flex-col items-center space-y-4 py-4 fixed top-0 right-0 w-3/4 h-full z-40 transition-transform transform translate-x-full glassmorphism">
+            <button id="hamburger-close" class="self-end mr-4 text-2xl" aria-label="Close Mobile Menu">
+                <i class="fas fa-times"></i>
+            </button>
+            <a href="index.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Home">Home</a>
+            <a href="about.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="About">About</a>
+            <a href="mission.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Mission" aria-current="page">Mission</a>
+            <a href="get-involved.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Get Involved">Get Involved</a>
+            <a href="media.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Media">Media</a>
+            <a href="contact.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Contact">Contact</a>
+        </div>
     </header>
 
-    <section class="hero bg-cover bg-center h-96 flex items-center text-white" style="background-image: url('assets/images/hero-mission.jpg');">
+    <section class="hero bg-cover bg-center h-96 flex items-center text-white animate-fade-in" style="background-image: url('./assets/images/hero-mission.webp');">
         <div class="container mx-auto text-center px-4">
-            <h2 class="text-4xl font-bold font-roboto">Our Mission: 20 Million by 2035</h2>
-            <p class="text-xl font-lora mt-4">“Bear fruit that will last” (John 15:16).</p>
+            <h2 class="text-4xl font-bold font-inter">Our Mission: Go and Make Disciples</h2>
+            <p class="text-xl font-merriweather mt-4">Matthew 28:19–20 guides our vision for West Africa.</p>
         </div>
     </section>
 
-    <section class="py-16 bg-gray-100">
+    <section class="py-16 bg-secondary">
         <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto mb-6">Our 2035 Goals</h3>
-            <ul class="list-disc list-inside text-lg font-lora space-y-4">
-                <li><strong>Evangelize:</strong> 200,000 conversions through crusades and 34–35 sermons/month.</li>
-                <li><strong>Disciple:</strong> 2,000 leaders, 8,900–9,000 course enrollees in 70–80 hubs.</li>
-                <li><strong>Engage:</strong> 10 million followers via app (370,000–380,000 downloads).</li>
-                <li><strong>Serve:</strong> 100,000–150,000 through charity.</li>
-                <li><strong>Celebrate:</strong> $20,000–$50,000 global conference in 2035.</li>
-            </ul>
-            <img src="assets/images/crusade.jpg" alt="Crusade Event" class="w-full rounded-lg shadow-md my-6" loading="lazy">
-        </div>
-    </section>
-
-    <section class="py-16 bg-white">
-        <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto mb-6">Our Strategy</h3>
-            <div class="grid md:grid-cols-2 gap-8">
-                <div>
-                    <h4 class="text-xl font-roboto font-semibold mb-2">Hubs</h4>
-                    <p class="font-lora">70–80 West African and 20 international hubs for Bible studies.</p>
+            <h3 class="text-3xl font-bold font-inter text-center mb-8">Our Vision by 2035</h3>
+            <div class="grid md:grid-cols-3 gap-8">
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">Evangelism</h4>
+                    <p class="font-merriweather">Reach 200,000 souls through 34–35 monthly sermons, crusades, and online outreach in markets and communities.</p>
                 </div>
-                <div>
-                    <h4 class="text-xl font-roboto font-semibold mb-2">Media</h4>
-                    <p class="font-lora">Afrobeats-inspired videos, Pidgin, five-language translations.</p>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">Discipleship</h4>
+                    <p class="font-merriweather">Train 2,000 leaders and enroll 8,900–9,000 in courses across 70–80 hubs in Nigeria, Ghana, and beyond.</p>
                 </div>
-                <div>
-                    <h4 class="text-xl font-roboto font-semibold mb-2">Funding</h4>
-                    <p class="font-lora">150–200 partners, mobile money, book sales.</p>
-                </div>
-                <div>
-                    <h4 class="text-xl font-roboto font-semibold mb-2">Faith</h4>
-                    <p class="font-lora">5-hour prayer, 3-hour Bible study daily.</p>
+                <div class="card glassmorphism">
+                    <h4 class="text-xl font-inter font-semibold mb-2">Impact</h4>
+                    <p class="font-merriweather">Grow to 10 million followers online and serve 100,000–150,000 through charity, education, and a Gospel app.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="py-16 bg-gray-100 text-center">
-        <div class="container mx-auto px-4">
-            <h3 class="text-3xl font-bold font-roboto mb-6">Eternal Impact</h3>
-            <p class="text-lg font-lora mb-6">From Lagos to global platforms, we’re building a legacy of faith.</p>
-            <a href="get-involved.html" class="btn btn-primary">Join a Hub</a>
-        </div>
-    </section>
-
-    <footer class="bg-green-800 text-white py-8">
+    <section class="py-16 bg-neutral">
         <div class="container mx-auto px-4 text-center">
-            <p class="font-lora mb-4">© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
+            <h3 class="text-3xl font-bold font-inter mb-6">Make We Bear Fruit Together!</h3>
+            <p class="text-lg font-merriweather mb-6">Your prayers, time, and support can transform lives across West Africa. Join our mission today.</p>
+            <a href="get-involved.html" class="btn btn-primary dynamic-cta">Support Our Vision</a>
+        </div>
+    </section>
+
+    <footer class="bg-primary text-white py-8 relative overflow-hidden">
+        <div class="absolute inset-0 opacity-10 bg-[url('./assets/images/kente-pattern.webp')] bg-repeat"></div>
+        <div class="container mx-auto px-4 text-center relative z-10">
+            <p class="font-merriweather mb-4">© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
             <div class="flex justify-center space-x-6 mb-4">
-                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp text-2xl"></i></a>
-                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok text-2xl"></i></a>
-                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube text-2xl"></i></a>
+                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp text-2xl hover:text-accent"></i></a>
+                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok text-2xl hover:text-accent"></i></a>
+                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="YouTube"><i class="fab fa-youtube text-2xl hover:text-accent"></i></a>
             </div>
-            <p class="font-roboto">Contact: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-amber-400">info@fruitfulbranchfamily.org</a> | +234-XXX-XXX-XXXX</p>
+            <p class="font-inter">Contact: <a href="mailto:info@fruitfulbranchfamily.org" class="hover:text-accent">info@fruitfulbranchfamily.org</a> | +234-XXX-XXX-XXXX</p>
         </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
