--- a/get-involved.html
+++ b/get-involved.html
@@ -55,6 +55,7 @@
             <a href="contact.html" class="text-lg font-inter hover:text-accent menu-item" aria-label="Contact">Contact</a>
         </div>
     </header>
+
     <section class="hero bg-cover bg-center h-96 flex items-center text-white animate-fade-in" style="background-image: url('./assets/images/hero-get-involved.webp');">
         <div class="container mx-auto text-center px-4">
             <h2 class="text-4xl font-bold font-inter">Join the Harvest!</h2>
@@ -99,9 +100,7 @@
         <div class="container mx-auto px-4 text-center">
             <h3 class="text-3xl font-bold font-inter mb-6">Donate to Bear Fruit</h3>
             <p class="text-lg font-merriweather mb-6">Your support funds hubs, sermons, and charity. Every naira counts!</p>
-            <input type="email" id="donor-email" placeholder="Enter your email" required class="input-class">
-            <input type="number" id="donation-amount" placeholder="Amount in ₦" required class="input-class">
-            <button id="donate-btn" class="btn-class" aria-label="Donate via Paystack">Donate</button>
+            <button id="donate-btn" class="btn btn-primary" aria-label="Donate via Paystack">Donate Now</button>
             <img src="./assets/images/paystack-qr.webp" alt="Paystack QR Code" class="mx-auto mt-4 h-32" loading="lazy">
         </div>
     </section>
@@ -123,4 +122,4 @@
     <script src="./js/scripts.js"></script>
     <script src="https://js.paystack.co/v1/inline.js"></script>
 </body>
-                </html>
+</html>
